# table_reserve_api

./: README.md  alembic.ini  fake_db_fill.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_04_10_1643-68b0d58c6c52_create_tables_and_rezervations_tables.py  2025_04_11_1118-f8677e280735_change_date_to_datetime_in_reservations_.py  2025_04_11_1227-33823f6aaaec_add_reservation_period_in_reservations_.py  2025_04_11_1511-d52b05aa3aec_add_no_overlapping_constraint.py  2025_04_12_2106-f2eb8b96b246_add_cascade_deletion.py
api/: __init__.py
api/v1/: __init__.py  crud.py  dependencies.py  models.py  schemas.py  views.py
api/v1/crud/: tables.py
core/: __init__.py  config.py  db_helper.py  models.py
